sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: ')' expected but '<-' found.
    if (i<- 0 to m-2){
         ^AlgCocktailSort1:19: error: illegal start of simple expression
  } while (true)
  ^